Added a Preferences activity with a few empty options. Also mad eit possible to change name registered to app.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Preferences activity -->
+        <activity
+            android:name=".PreferencesActivity"
+            android:launchMode="singleTop">
+        </activity>
     </application>
 
 </manifest>
