Created activities for currentlyplaying and game list. Shifted activity titles to strings.xml. Made menu point to new activities instead of showing toast.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,10 +25,22 @@
             </intent-filter>
         </activity>
 
+        <!-- Currently playing activity -->
+        <activity
+            android:name=".CurrentlyPlayingActivity"
+            android:launchMode="singleTop" >
+        </activity>
+
+        <!-- Game list activity -->
+        <activity
+            android:name=".GameListActivity"
+            android:launchMode="singleTop" >
+        </activity>
+
         <!-- Preferences activity -->
         <activity
             android:name=".PreferencesActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop" >
         </activity>
     </application>
 
