--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <!-- Main activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
             <intent-filter>
@@ -27,20 +27,34 @@
 
         <!-- Currently playing activity -->
         <activity
-            android:name=".CurrentlyPlayingActivity"
+            android:name=".Activities.CurrentlyPlayingActivity"
             android:launchMode="singleTop" >
         </activity>
 
         <!-- Game list activity -->
         <activity
-            android:name=".GameListActivity"
+            android:name=".Activities.GameListActivity"
             android:launchMode="singleTop" >
         </activity>
 
         <!-- Preferences activity -->
         <activity
-            android:name=".PreferencesActivity"
+            android:name=".Activities.PreferencesActivity"
             android:launchMode="singleTop" >
+        </activity>
+
+        <!-- About App Notification activity -->
+        <activity
+            android:name=".Activities.Notification.AboutAppActivity"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+
+        <!-- About Developer Notification activity -->
+        <activity
+            android:name=".Activities.Notification.AboutDeveloperActivity"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
     </application>
 
