--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,11 +7,14 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
 
         <!-- Main activity -->
         <activity
@@ -35,6 +38,20 @@
         <activity
             android:name=".Activities.GameListActivity"
             android:launchMode="singleTop" >
+        </activity>
+
+        <!-- Search activity -->
+        <activity
+            android:name=".Activities.SearchActivity"
+            android:launchMode="singleTop" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" >
+                </action>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
 
         <!-- Preferences activity -->
